# DataStructures

./: .gitignore  AVLTree.c  AVLTree.h  ArrayQueue.c  ArrayQueue.h  ArrayStack.c  ArrayStack.h  BST  BinarySearchTree.c  BinarySearchTree.h  CMakeLists.txt  CONTRIBUTING.md  CircleList.c  CircleList.h  DataStructures.sln  DataStructures.vcxproj  DataStructures.vcxproj.filters  DoublyLinkedList.c  DoublyLinkedList.h  Heap.c  Heap.h  Information.txt  LinkedList.c  LinkedList.h  Programa.c  Queue.c  Queue.h  README.md  ReadMe.txt  SortingAlgorithms.c  SortingAlgorithms.h  Stack.c  Stack.h  TAD.h  Types.h  Vector.c  main.c
3thparty/: acutest.h
Array/: ArrayList.c  ArrayList.h  ArrayQueue.c  ArrayQueue.h  ArrayStack.c  ArrayStack.h
BinaryTrees/: AVLTree.c  AVLTree.h  BinarySearchTree.c  BinarySearchTree.h  RedBlackTree.c  RedBlackTree.h
Compression/: Huffman.c  Huffman.h  RLE.c  RLE.h  StringUtilities.c  StringUtilities.h  Utilities.c  Utilities.h
Debug/: arrayqueue.nativecodeanalysis.xml  arraystack.nativecodeanalysis.xml  binarysearchtree.nativecodeanalysis.xml  doublylinkedlist.nativecodeanalysis.xml  linkedlist.nativecodeanalysis.xml  programa.obj.enc  queue.nativecodeanalysis.xml  sortingalgorithms.nativecodeanalysis.xml  stack.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc140.idb  vector.nativecodeanalysis.xml
Graphs/: Graph.h
Heap/: Heap.c  Heap.h
Lists/: CircleList.c  CircleList.h  DoublyLinkedList.c  DoublyLinkedList.h  LinkedList.c  LinkedList.h
Queue/: Queue.c
Queues/: Deque.c  Deque.h  Queue.c  Queue.h
Stack/: Stack.c  Stack.h
Teste/: Teste.project
Tests/: SortingTests.c  SortingTests.h
Trie/: Trie.h
Vector/: SearchAlgorithms.c  SearchAlgorithms.h  SortingAlgorithms.c  SortingAlgorithms.h  Vector.c  Vector.h
array/: ArrayList.c  ArrayList.h  ArrayQueue.c  ArrayQueue.h  ArrayStack.c  ArrayStack.h
binarytrees/: AVLTree.c  AVLTree.h  BinarySearchTree.c  BinarySearchTree.h  RedBlackTree.c  RedBlackTree.h
bst/: BST.cpp  BST.h  BSTNode.cpp  BSTNode.h
compression/: Huffman.c  Huffman.h  RLE.c  RLE.h  Utilities.c  Utilities.h
examples/: vector.c
heap/: Heap.c  Heap.h
include/: handler.h  linked_list.h  types.h  util.h
lists/: CircleList.c  CircleList.h  DoublyLinkedList.c  DoublyLinkedList.h  LinkedList.c  LinkedList.h
queues/: Deque.c  Deque.h  Queue.c  Queue.h
(+31 files in other folders)
